--- a/app/elements/login-element/login-element.html
+++ b/app/elements/login-element/login-element.html
@@ -99,7 +99,7 @@
 
         console.log('click', this);
         var
-          username = $('[name="name"]').val(),
+          username = $('[name="name"]').val().toLowerCase(),
           password = $('[name="password"]').val();
 
 
