--- a/app/index.html
+++ b/app/index.html
@@ -149,7 +149,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <section data-route="u-appointment-overview">
 
               <template is="dom-if" if="{{isEqual(route, 'u-appointment-overview')}}" restamp="true">
-              <!-- <slot-list></slot-list> -->
+              <appointment-list-user></appointment-list-user>
 
               </template>
             </section>
