--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -69,7 +69,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 <link rel="import" href="docent-list/docent-list.html">
 <link rel="import" href="docent-list-user/docent-list-user.html">
-<link rel="import" href="create-time/create-time.html"><link rel="import" href="create-timeslots/create-timeslots.html">
+<link rel="import" href="create-time/create-time.html">
+
 <link rel="import" href="times-list/times-list.html">
 <link rel="import" href="appointment-list-user/appointment-list-user.html">
 <link rel="import" href="create-rooms/create-rooms.html">
