--- a/app/elements/slot-list/slot-list.html
+++ b/app/elements/slot-list/slot-list.html
@@ -32,18 +32,27 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       padding-left: 94px;
       position: relative;
     }
+    paper-dialog{
+      max-width: 600px;
+    }
+
+    .pointer {
+      cursor:pointer;
+    }
   </style>
   <template>
 
 
     <loading-placeholder loading-status="{{loading}}"></loading-placeholder>
 
-    <template is="dom-repeat" items="{{dateList}}" as="list">
+    <template is="dom-repeat" items="{{dateList}}" as="list" hidden="{{loading}}">
 
       <paper-card>
 
         <div class="card-content">
-  <iron-icon icon="highlight-off" on-tap="roomDel"></iron-icon>
+<!-- <paper-material elevation="1"> -->
+
+
           <paper-button on-click="expandSlots">
             <iron-icon icon="{{icon}}"></iron-icon>
 
@@ -51,15 +60,14 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <h4>{{list.date}}</h4>
 
           <iron-collapse id="{{getID(list.date)}}">
-          <!-- <h3>  test</h3>
-     -->
-          <template is="dom-repeat" items="{{list.slots}}" as="slot">
+
+            <template is="dom-repeat" items="{{list.slots}}" as="slot">
 
               <span hidden="true">{{list.date}}</span>
               <paper-item class="custom-item" on-click="slotClicked">
-                <paper-item-body three-line class="paper-item-body-0">
-                  <paper-ripple fit></paper-ripple>
-                  <!-- <span>{{slot.availability}}</span> -->
+                <paper-item-body three-line class="pointer paper-item-body-0">
+                  <paper-ripple hidden={{!slot.availability}} fit></paper-ripple>
+
                   <div hidden="{{!slot.availability}}">
                     <b class="green">Available</b>
                   </div>
@@ -80,7 +88,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 
             </template>
-      </iron-collapse>
+          </iron-collapse>
+          </paper-material>
+        </div>
       </paper-card>
     </template>
     <paper-dialog id="confirmDialog" modal>
@@ -137,7 +147,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             observer: 'clickedDocentChanged'
           },
           loading: {
-            type: Boolean
+            type: Boolean,
+            value: false,
+            notify:true
           },
           icon: {
             type: String,
@@ -154,7 +166,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             //  observer: 'dateListChanged'
           },
         },
-        test: function(){
+        test: function() {
           document.querySelector('#test').toggle();
         },
         getID: function(date) {
@@ -164,7 +176,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         },
         clickedDocentChanged: function(oldValue, newValue) {
           var self = this;
-          // console.log("change", oldValue, newValue);
+              self.loading = !self.loading;
           Parse.Cloud.run('singleDocent', {
             email: this.clickedDocent.get("email")
           }, {
@@ -197,8 +209,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                     List.push(item);
                     // console.log("date",date);
                   }
-                  // List.sort();
-                  // console.log("List", List);
+                  // if(List.length === 0){
+                  //     var item = {};
+                  //   item["empty"] = "This Docent is currently not available";
+                  //       List.push(item);
+                  // }
                   self.dateList = List;
                   self.loading = !self.loading;
 
@@ -225,16 +240,16 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           var model = e.model;
           var date = model.get("list.date");
           var theID = date.substring(0, 3).toLowerCase() + date.substring(5, 7).toLowerCase() + date.substring(8, 11).toLowerCase() + date.substring(12, date.length);
-        theID = "#"+theID;
-        // console.log(this.querySelector(theID));
-        this.querySelector(theID).toggle();
+          theID = "#" + theID;
+          // console.log(this.querySelector(theID));
+          this.querySelector(theID).toggle();
         },
         dateClicked: function(e) {
 
         },
         slotClicked: function(e) {
           var model = e.model;
-          clickedSlot = model.get("slot.startTime");
+          clickedSlot = model;
 
 
           var available = model.get("slot.availability");
@@ -247,32 +262,26 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           // fixedDate = new moment(new Date(model.get("list.date")));
           this.date = model.get("list.dateObject");
           queryDate = this.date;
-          console.log("date", model.get("list.dateObject"));
+          console.log("querydate",queryDate);
+          this.date = moment(this.date).locale('en', {
+            months: [
+              "January", "February", "March", "April", "May", "June", "July",
+              "August", "September", "October", "November", "December"
+            ]
+          }).format("ddd, DD MMM YYYY");
 
           if (available) {
-            model.set("slot.availability", false);
+
             this.currentUser = this.currUser.get("email");
             this.$.confirmDialog.toggle();
           }
         },
         confirmClick: function(e) {
+          var self = this;
           var model = e.model;
           var user = Parse.User.current();
-          // var queryDate = fixedDate;
-          // queryDate.utc();
-          // queryDate.locale('en', {
-          //   months: [
-          //     "January", "February", "March", "April", "May", "June", "July",
-          //     "August", "September", "October", "November", "December"
-          //   ]
-          // });
-          // queryDate.set('hour', 0);
-          // queryDate.set('minute', 0);
-          // queryDate.set('second', 0);
-          // queryDate.set('millisecond', 0);
-          // queryDate.toISOString();
 
-          console.log("queryDate",queryDate);
+
           Parse.Cloud.run('createAppointment', {
             docentId: retrievedDocentId,
             userEmail: user.get("email"),
@@ -280,15 +289,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             slotDate: queryDate
           }, {
             success: function(result) {
-              console.log("created", result);
-              if(JSON.stringify(result) === JSON.stringify(queryDate) ){
-                console.log("???");
-              }
-              // clickedRoom.set("item.status", false);
-              // clickedRoom.set("item.email", result.get("email"));
-              // clickedRoom.set("item.docent", result.get("lastName") + " " + result.get("firstName"));
-              // clickedRoom.set("item.docentObject", result);
-
+            clickedSlot.set("slot.availability", false);
+              console.log("result",result);
             },
             error: function(error) {}
           });
